[gd_scene load_steps=3 format=2]

[ext_resource path="res://player/hook/Hook.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/hook.wav" type="AudioStream" id=2]

[node name="Hook" type="Position2D"]
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
width = 0.5
default_color = Color( 0, 0, 0, 1 )
texture_mode = 21

[node name="Tween" type="Tween" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_started" from="Tween" to="." method="_on_Tween_tween_started"]
